--- a/Avocat_Spring-master/pom.xml
+++ b/Avocat_Spring-master/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>jasperreports</artifactId>
             <version>6.21.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
 
 
 
