--- a/Avocat_Spring-master/pom.xml
+++ b/Avocat_Spring-master/pom.xml
@@ -154,7 +154,11 @@
             <version>0.11.2</version>
             <scope>runtime</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.chemistry.opencmis</groupId>
+            <artifactId>chemistry-opencmis-client-impl</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
