--- a/Avocat_Spring-master/src/main/resources/application.properties
+++ b/Avocat_Spring-master/src/main/resources/application.properties
@@ -39,3 +39,4 @@ spring.servlet.multipart.max-file-size=20MB
 #thumbnails.path=thumbnails/
 
 
+spring.jackson.serialization.fail-on-empty-beans=false
